# bzl-poc

./: .bazelignore  .gitignore  MODULE.bazel  README.md
components/go-hello/: BUILD  BUILD.bazel  MODULE.bazel  go.mod  main.go
components/go-hello/cmd/: BUILD.bazel  root.go
docker-images/hello/: BUILD  MODULE.bazel  test.yaml
oci-images/go-hello/: BUILD.bazel  MODULE.bazel  test.yaml
