package(default_visibility = ["//visibility:public"])

load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix components/go-hello
gazelle(name = "gazelle")

go_library(
    name = "go-hello_lib",
    srcs = ["main.go"],
    importpath = "components/go-hello",
    deps = ["//cmd"],
)

go_binary(
    name = "go-hello",
    embed = [":go-hello_lib"],
)
