module(
    name = "go-hello-image",
    version = "0.0.1",
)

bazel_dep(name = "aspect_bazel_lib", version = "1.32.0")
bazel_dep(name = "container_structure_test", version = "1.15.0")
bazel_dep(name = "rules_pkg", version = "0.8.1")
bazel_dep(name = "rules_oci", version = "1.2.0")

bazel_dep(name = "go-hello", version = "")
local_path_override(
    module_name = "go-hello",
    path = "../../components/go-hello",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_base",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)

use_repo(oci, "distroless_base")
